Refactor apis: - Fix tests. - Add metrics. - Refactor apis. - Update README. - Update swagger.
