# internal/http/handlers/handlers.go
@@ -61,7 +61,7 @@ func NewHttpHandler(gateway *smsgateway.SmsGateway) *HttpHandler {
 //	@Produce		json
 //	@Param			user	body		createUserRequest	true	"User payload"
 //	@Success		200		{object}	stdResponse
-//	@Router			/user/ [post]
+//	@Router			/api/user/ [post]
 func (h *HttpHandler) CreateUser(c *fiber.Ctx) error {
 	var req createUserRequest
 	if err := c.BodyParser(&req); err != nil {
@@ -93,7 +93,7 @@ func (h *HttpHandler) CreateUser(c *fiber.Ctx) error {
 //	@Produce		json
 //	@Param			id	path		int	true	"User ID"
 //	@Success		200	{object}	stdResponse
-//	@Router			/user/{id} [get]
+//	@Router			/api/user/{id} [get]
 func (h *HttpHandler) GetUser(c *fiber.Ctx) error {
 	userId := c.Params("id")
 	if userId == "" {
@@ -124,7 +124,7 @@ func (h *HttpHandler) GetUser(c *fiber.Ctx) error {
 //	@Param			page		query		int		false	"Page number"				default(1)
 //	@Param			pageSize	query		int		false	"Number of items per page"	default(10)
 //	@Success		200			{object}	stdResponse
-//	@Router			/user/{id}/sms [get]
+//	@Router			/api/user/{id}/sms [get]
 func (h *HttpHandler) GetUserMessages(c *fiber.Ctx) error {
 	userId := c.Params("id")
 	if userId == "" {
@@ -159,7 +159,7 @@ func (h *HttpHandler) GetUserMessages(c *fiber.Ctx) error {
 //	@Param			id	path		int			true	"User ID"
 //	@Param			sms	body		smsRequest	true	"User payload"
 //	@Success		200	{object}	stdResponse
-//	@Router			/user/{id}/sms/single [post]
+//	@Router			/api/user/{id}/sms/single [post]
 func (h *HttpHandler) SendSingleMessage(c *fiber.Ctx) error {
 	userId := c.Params("id")
 	if userId == "" {
@@ -200,7 +200,7 @@ func (h *HttpHandler) SendSingleMessage(c *fiber.Ctx) error {
 //	@Param			id	path		int				true	"User ID"
 //	@Param			sms	body		[]smsRequest	true	"User payload"
 //	@Success		200	{object}	stdResponse
-//	@Router			/user/{id}/sms/bulk [post]
+//	@Router			/api/user/{id}/sms/bulk [post]
 func (h *HttpHandler) SendBulkMessage(c *fiber.Ctx) error {
 	userId := c.Params("id")
 	if userId == "" {
@@ -247,7 +247,7 @@ func (h *HttpHandler) SendBulkMessage(c *fiber.Ctx) error {
 //	@Param			id		path		int						true	"User ID"
 //	@Param			balance	body		increaseBalanceRequest	true	"User payload"
 //	@Success		200		{object}	stdResponse
-//	@Router			/user/{id}/balance [post]
+//	@Router			/api/user/{id}/balance [post]
 func (h *HttpHandler) IncreaseUserBalance(c *fiber.Ctx) error {
 	userId := c.Params("id")
 	if userId == "" {
